
      rewrite /search.php /index.php?route=search/search&type=simple;

      becomes

      rewrite /archive/search.php /archive/index.php?route=search/search&type=simple;

- import.sh and accounting are enabled in piler's crontab by default

- Created a tool to mass download emails from Microsoft365 (formerly office365)
  You may find it in the contrib/o365 dir


1.4.5:
------

- Introduced 2 new variables in /etc/piler/piler.conf affecting piler-smtp

  ; max message size in bytes
  ; piler-smtp will reject any message that's bigger than this number
  max_message_size=50000000

  ; max memory in bytes piler-smtp uses for buffering messages
  ; when this limit is exceeded, no new emails will be accepted
  ; until the used memory for all in progress emails decreases
  ; below this level
  max_smtp_memory=500000000

  Be sure to adjust these values to your environment!

- Added read-only connection support for manticore
  If using sphinx, add the following to config-site.php:
  $config['SPHINX_HOSTNAME_READONLY'] = '127.0.0.1:9306';

- pilerimport supports Zimbra IMAP impersonation

  Generate the following base64 encoded string:
  (Be sure to use the actual usernames and password):

  pw="$( printf '%s\0%s\0%s' 'username' 'zimbra_admin_username' 'zimbra_admin_password' | base64 )"

  Then specify -u ZIMBRA -p "$pw" for pilerimport, eg.

  pilerimport -i imap.server -u ZIMBRA -p "$pw" ...

  Note that "ZIMBRA" is a special username, it indicates for pilerimport
  to actually use the imap impersonation for Zimbra.


1.4.4:
------

- Renamed "group" table to "usergroup"
  Be sure to run util/db-upgrade.sql on the mysql piler database


1.4.3:
------

- Improved real-time index support (no need to use rtindex.py any more)
  See https://www.mailpiler.org/wiki/current:manticore for more


1.4.2:
------

- Fixed docker image
- Fixed php socket path in piler-nginx.conf
- Fixed manticore index data settings


1.4.1:
------
