@@ -179,7 +179,6 @@ $config['ENABLE_HISTORY'] = 1;
 $config['ENABLE_DELETE'] = 0;
 $config['NEED_TO_APPROVE_DELETE'] = 0;
 $config['ENABLE_REMOTE_IMAGES'] = '0';
-$config['ENABLE_ON_THE_FLY_VERIFICATION'] = 0;
 $config['ENABLE_LDAP_IMPORT_FEATURE'] = 0;
 $config['ENABLE_FOLDER_RESTRICTIONS'] = 0;
 
